--- a/css-demo/assets/css/style.css
+++ b/css-demo/assets/css/style.css
@@ -33,6 +33,7 @@ html {
 
   header.primary{
     background: #E6D47B;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' viewBox='0 0 40 40'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%239C92AC' fill-opacity='0.4'%3E%3Cpath d='M0 38.59l2.83-2.83 1.41 1.41L1.41 40H0v-1.41zM0 1.4l2.83 2.83 1.41-1.41L1.41 0H0v1.41zM38.59 40l-2.83-2.83 1.41-1.41L40 38.59V40h-1.41zM40 1.41l-2.83 2.83-1.41-1.41L38.59 0H40v1.41zM20 18.6l2.83-2.83 1.41 1.41L21.41 20l2.83 2.83-1.41 1.41L20 21.41l-2.83 2.83-1.41-1.41L18.59 20l-2.83-2.83 1.41-1.41L20 18.59z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
     color:#ffffff;
     text-shadow: 1px 1px#000000;
     /*long Form*/
@@ -105,6 +106,9 @@ html {
     flex-direction:row;
     justify-content:space-around;
     gap:2rem;
+    border-top: 1px dotted #D9D4DE;
+    border-bottom: 1px dotted #D9D4DE;
+    padding: 2.6rem 0;
   }
 
   #content article.post{
@@ -112,6 +116,11 @@ html {
     padding:10px;
     border-radius:4px;
     font-size: .8rem;
+    transition: .4s;
+  }
+
+  #content article.post:hover{
+    box-shadow: 0 8px 16px rgba(0, 0, 0, .6);
   }
 
   time.post-date, figcaption{
@@ -126,8 +135,44 @@ html {
     margin:0;
   }
 
+  aside[role="complementary"]{
+    background: lavender;
+    color: blue;
+    padding:40px 0;
+  }
+
+  aside .container{
+    display:flex;
+    flex-direction: row;
+    justify-content:space-around;
+    gap: 60px;
+  }
+
+  aside a{
+    color:pink;
+  }
+
+  aside a:last-of-type{
+    color:pink;
+    display: block;
+    margin-top: 10px;
+    text-align: right;
+  }
+
+  aside .widget footer{
+    display: none;
+  }
+
+  footer#colophon.primary{
+    background: #E6D47B;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' viewBox='0 0 40 40'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%239C92AC' fill-opacity='0.4'%3E%3Cpath d='M0 38.59l2.83-2.83 1.41 1.41L1.41 40H0v-1.41zM0 1.4l2.83 2.83 1.41-1.41L1.41 0H0v1.41zM38.59 40l-2.83-2.83 1.41-1.41L40 38.59V40h-1.41zM40 1.41l-2.83 2.83-1.41-1.41L38.59 0H40v1.41zM20 18.6l2.83-2.83 1.41 1.41L21.41 20l2.83 2.83-1.41 1.41L20 21.41l-2.83 2.83-1.41-1.41L18.59 20l-2.83-2.83 1.41-1.41L20 18.59z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+    padding:10px;
+    text-align:center;
+    color:#000000;
+    font-size: 1.3rem;
+  }
+
 body{
-    /* mostly just colors and font types */
     background-color: #4061A0;
     font-family: "Comic Neue", cursive;
 
@@ -147,5 +192,15 @@ body{
 
   nav.primary ul a{
     display:block;
+  }
+aside.container{
+  flex-direction:column;
+  gap:60px;
+}
+}
+
+@media screen and (max-width:400px){
+  #content{
+    flex-direction:column;
   }
 }
