--- a/spacex/assets/css/style.css
+++ b/spacex/assets/css/style.css
@@ -1,316 +1,161 @@
+/*  ---------------Box Sizing-----------------  */
+
 html {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 *,
-*:before, 
+*:before,
 *:after {
-    box-sizing: inherit;
+  box-sizing: inherit;
 }
 
 .container{
-    width: 80vw;
-    max-width: 960px;
-    margin: 40px auto;
-  }
-
-  .img-right {
-    float: right;
-    margin:10px 0 10px 20px;
-    border: 5px solid black;
-    padding:5px;
-    border-radius: 50px;
-  }
-
-  .img-left {
-    float: left;
-    margin:10px 20px 10px 0px;
-    border: 5px solid black;
-    padding:5px;
-    border-radius: 50px;
-  }
-
-  .img-center{
-    display:block;
-    margin: 20px auto;
-    border: 5px solid black;
-    padding:5px;
-    border-radius: 50px;
-  }
-
-  body{
-
-    margin:0;
-
-  }
-
-  header.primary{
-    background: #6c41bb;
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' viewBox='0 0 40 40'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%239C92AC' fill-opacity='0.4'%3E%3Cpath d='M0 38.59l2.83-2.83 1.41 1.41L1.41 40H0v-1.41zM0 1.4l2.83 2.83 1.41-1.41L1.41 0H0v1.41zM38.59 40l-2.83-2.83 1.41-1.41L40 38.59V40h-1.41zM40 1.41l-2.83 2.83-1.41-1.41L38.59 0H40v1.41zM20 18.6l2.83-2.83 1.41 1.41L21.41 20l2.83 2.83-1.41 1.41L20 21.41l-2.83 2.83-1.41-1.41L18.59 20l-2.83-2.83 1.41-1.41L20 18.59z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
-    color:#ffffff;
-    text-shadow: 1px 1px#000000;
-    /*long Form*/
-    padding-top: 40px;
-    padding-right: 40px;
-    padding-bottom: 40px;
-    padding-left: 40px;
-    /* single values short hand*/
-    padding: 40px;
-    /*T, R, B, L */
-    padding: 20px 40px 20px 40px;
-
-    text-align:center;
-  }
-
-  header.primary h1{
-    font-size: 2.4rem;
-    margin: 10px 0 0 0;
-  }
-
-  header.primary h1 a{
-    color:#D0574E;
-    text-decoration: none;
-  }
-
-  header.primary h2{
-    font-size: 1.4rem;
-    margin: 0;
-  }
-
-  nav.primary{
-    max-width:960px;
-    margin: auto;
-  }
-  nav.primary ul{
-    padding:0;
-    display:flex;
-    flex-direction: row;
-    justify-content: space-around;
-    
-  }
-  nav.primary ul li{
-    list-style-type: none;
-  }
-  nav.primary ul li a{
-    color:#ffffff;
-    text-decoration:none;
-    border: 1px solid #c0c0c0;
-    background:#EEB8C4;
-    padding: 7.5px 10px;
-    border-radius: 20px;
-    transition: .4s;
-  }
-  nav.primary ul li a:hover{
-    background-color: #9A5A79;
-  }
-
-  #intro {
-    line-height: 1.6;
-  }
-
-  #intro h2{
-    color:aliceblue;
-    text-decoration:underline;
-    border-bottom: 4px dotted #D9D4DE;
-  }
-
-  #content header{
-    text-align: center;
-  }
-  #content{
-    display:flex;
-    flex-direction:row;
-    justify-content:space-around;
-    gap:2rem;
-    border-top: 1px dotted #D9D4DE;
-    border-bottom: 1px dotted #D9D4DE;
-    padding: 2.6rem 0;
-  }
-
-  
-  #content article.post{
-    box-shadow: 0 4px 8px rgba(0, 0, 0, .6);
-    padding:10px;
-    border-radius:4px;
-    font-size: .8rem;
-    transition: .4s;
-  }
-
-  #content article.post:hover{
-    box-shadow: 0 8px 16px rgba(0, 0, 0, .6);
-  }
-
-  time.post-date, figcaption{
-    text-transform:uppercase;
-    color:#ccc;
-  }
-  #content a{
-    color:pink;
-  }
-
-  #content article.post figure{
-    margin:0;
-  }
-
-  #practice h2{
-    color:aliceblue;
-    border-bottom: 2px dotted #D9D4DE;
-  }
-
-  #practice a{
-    color:aliceblue;
-    transition:.4s;
-  }
-
-  #practice a:hover{
-    text-decoration: none;
-    transition:.4s;
-  }
-
-  #practice h3{
-    border-left: 7.5px solid aliceblue;
-    padding:3.5px 10px;
-  }
-
-  table{
-    width:100%;
-    border:1px solid black;
-    margin: 20px 0;
-    border-collapse:collapse;
-  }
-  caption{
-    font-weight: bold;
-    margin:10px;
-  }
-  tr:nth-child(even){
-    background-color: rgba(0, 0, 0, .1);
-  }
-
-  tr:hover{
-    background-color: rgba(0, 0, 0, .4);
-  }
-
-  th{
-    background-color: #EEB8C4;
-    color:#D0574E;
-    padding:7.5px;
-  }
-  td{
-    border:1px solid black;
-    padding:5px;
-  }
-
-  td:nth-child(2), td:nth-child(3){
-    text-align:right;
-  }
-
-  td:nth-child(n+2){
-    text-align: right;
-  }
-
-  #practice ol{
-    list-style-type:lower-alpha;
-  }
-
-  #practice ul{
-    list-style-type:square;
-  }
-
-  #practice ul li ul{
-    list-style-type:disc;
-  }
-
-  #practice dt{
-    font-weight:bold;
-  }
-
-  #practice dd{
-    margin:0;
-  }
-
-  dd + dt{
-    margin-top:1rem; 
-  }
-
-  blockquote{
-    border: 4px double #E6D47B;
-    padding: 20px 40px;
-    background-color: #EEB8C4;
-    color:#D0574E;
-    border-radius: 30px, 0;
-    margin:40px 80px;
-    line-height:1.4;
-  }
-
-  cite{
-    display: block;
-    text-align: right;
-    font-size: .7rem;
-    margin-top:1rem;
-  }
-
-  aside[role="complementary"]{
-    background: lavender;
-    color: blue;
-    padding:40px 0;
-  }
-
-  aside .container{
-    display:flex;
-    flex-direction: row;
-    justify-content:space-around;
-    gap: 60px;
-  }
-
-  aside a{
-    color:pink;
-  }
-
-  aside a:last-of-type{
-    color:pink;
-    display: block;
-    margin-top: 10px;
-    text-align: right;
-  }
-
-  aside .widget footer{
-    display: none;
-  }
-
-  footer#colophon.primary{
-    background: #E6D47B;
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' viewBox='0 0 40 40'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%239C92AC' fill-opacity='0.4'%3E%3Cpath d='M0 38.59l2.83-2.83 1.41 1.41L1.41 40H0v-1.41zM0 1.4l2.83 2.83 1.41-1.41L1.41 0H0v1.41zM38.59 40l-2.83-2.83 1.41-1.41L40 38.59V40h-1.41zM40 1.41l-2.83 2.83-1.41-1.41L38.59 0H40v1.41zM20 18.6l2.83-2.83 1.41 1.41L21.41 20l2.83 2.83-1.41 1.41L20 21.41l-2.83 2.83-1.41-1.41L18.59 20l-2.83-2.83 1.41-1.41L20 18.59z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
-    padding:10px;
-    text-align:center;
-    color:#000000;
-    font-size: 1.3rem;
-  }
-
-body{
-    background-color: #4061A0;
-    font-family: "Comic Neue", cursive;
-
+  width: 80vw;
+  max-width: 960px;
+  margin: 40px auto;
 }
 
-  @media screen and (max-width:600px){
+/*-----------Global Styles-------------- */
+body{
+  background-color: #191970;
+  font-family: "Courier Prime", monospace;
+  color: white;
+  margin:0; 
+}
 
-    nav.primary ul{
-      flex-direction: column;
-      gap:20px;
-      max-width: 250px;
-      margin:10px auto;
-    }
+
+header.primary{
+  background: red; /* change to my javascript cycle*/
+  color:purple;
+  text-shadow: 2px, 2px, #000000;
+  padding-top: 40px;
+  padding-right: 40px;
+  padding-bottom: 40px;
+  padding-left: 40px;
+  text-align: center;
+}
+
+header.primary h1{
+  font-size: 2.4rem;
+  margin: 10px 0 0 0;
+}
+
+header.primary h1 a{
+  color: slateblue; 
+  text-decoration: none;
+}
+
+header.primary h2{
+  font-size: 1.4rem;
+  margin:0;
+}
+
+nav.primary{
+  max-width:960px;
+  margin: auto;
+}
+nav.primary ul{
+  padding:0;
+  display:flex;
+  flex-direction: row;
+  justify-content: space-around;
   
-    nav.primary ul a{
-      display:block;
-    }
-  aside.container{
-    flex-direction:column;
-    gap:60px;
-  }
-  }
-  
-  @media screen and (max-width:400px){
-    #content{
-      flex-direction:column;
-    }
-  }
+}
+nav.primary ul li{
+  list-style-type: none;
+}
+nav.primary ul li a{
+  color:#ffffff;
+  text-decoration:none;
+  border: 1px solid #c0c0c0;
+  background:#800080;
+  padding: 7.5px 10px;
+  border-radius: 20px;
+  transition: .4s;
+}
+nav.primary ul li a:hover{
+  background-color: #9A5A79;
+}
+
+#intro {
+  line-height: 1.6;
+}
+#intro h2{
+  color: #00FFBF;
+  text-decoration: underline;
+  border-bottom:4px solid #ffffff;
+}
+
+#configs h2{
+  color: #00FFBF;
+  text-decoration: underline;
+  margin-bottom: 200px;
+}
+
+#configs {
+  display:flex;
+  flex-direction: row;
+  justify-content: space-around;
+  gap: 2rem;
+  border-top: 1px solid #ffffff;
+  border-bottom: 1px solid #ffffff;
+  padding: 2.6rem 0;
+}
+
+#configs article.post{
+  box-shadow: 0.4px 8px rgba(255, 255, 255, 0.6);
+  padding: 10px;
+  border-radius: 4px;
+  font-size: .8rem;
+  transition: .4s;
+}
+
+#configs article.post:hover{
+  box-shadow: 0 8px 16px rgba(0,0,0,.6);
+}
+
+table{
+  width:100%;
+  border:1px solid black;
+  margin: 20px 0;
+  border-collapse:collapse;
+}
+caption{
+  font-weight: bold;
+  margin:10px;
+}
+tr:nth-child(even){
+  background-color: rgba(0, 0, 0, .1);
+}
+
+tr:hover{
+  background-color: rgba(0, 0, 0, .4);
+}
+
+th{
+  background-color: #EEB8C4;
+  color:#D0574E;
+  padding:7.5px;
+}
+td{
+  border:1px solid black;
+  padding:5px;
+}
+
+td:nth-child(2), td:nth-child(3){
+  text-align:right;
+}
+
+td:nth-child(n+2){
+  text-align: right;
+}
+
+footer#colophon.primary {
+  display:flex;
+  flex-direction: row;
+  justify-content: space-around;
+  gap: 2rem;
+  border-top: 1px solid #ffffff;
+  border-bottom: 1px solid #ffffff;
+  padding: 2.6rem 0;
+}
