--- a/spacex/assets/css/style.css
+++ b/spacex/assets/css/style.css
@@ -23,6 +23,38 @@ body{
   margin:0; 
 }
 
+img{
+  max-width:100%;
+}
+
+.container{
+  margin:40px auto;
+  width:70vw;
+  /* Set Max Content Width */
+  max-width:700px;
+}
+
+/* Customize Previous/Next/Dots/Autoplay */
+
+.slick-autoplay-toggle-button,
+.slick-prev .slick-prev-icon, .slick-next .slick-next-icon,
+.slick-dots li button .slick-dot-icon,
+.slick-dots li.slick-active button .slick-dot-icon {
+color: white;
+}
+
+/* Customize Previous/Next/Dots/Autoplay - Active State */
+
+.slick-next:focus .slick-next-icon,
+.slick-next:focus .slick-prev-icon,
+.slick-prev:focus .slick-next-icon,
+.slick-prev:focus .slick-prev-icon,
+.slick-dots li button:focus .slick-dot-icon:before,
+.slick-dots li.slick-active button:focus .slick-dot-icon,
+.slick-autoplay-toggle-button:focus 
+{
+  color:black;
+}
 
 header.primary{
   background: red; /* change to my javascript cycle*/
@@ -133,7 +165,7 @@ tr:hover{
 }
 
 th{
-  background-color: #EEB8C4;
+  background-color: #717378;
   color:#D0574E;
   padding:7.5px;
 }
@@ -150,7 +182,7 @@ td:nth-child(n+2){
   text-align: right;
 }
 
-footer#colophon.primary {
+footer.primary {
   display:flex;
   flex-direction: row;
   justify-content: space-around;
